# Weather-Data-Module

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
csv_examples/: detailed_output.csv  example_locations.csv  input.csv  output.csv
src/weather_module/: __init__.py  cli.py  config.py  logging_config.py  pipeline.py
src/weather_module/api/: weather_client.py
src/weather_module/cache/: __init__.py  memory_cache.py
src/weather_module/http_api/: __init__.py  dependencies.py  routes.py
src/weather_module/io/: __init__.py  csv_reader.py  csv_writer.py
src/weather_module/models/: __init__.py  models.py
src/weather_module/services/: weather_service.py
tests/: README.md  test_api.py  test_cli.py  test_csv_reader.py  test_csv_writer.py  test_service.py
